[gd_scene load_steps=7 format=2]

[ext_resource path="res://game/asset/graphic/ui/menu/emplacement.png" type="Texture" id=1]
[ext_resource path="res://game/script/ui/inventory/Emplacement.gd" type="Script" id=2]
[ext_resource path="res://game/asset/graphic/ui/menu/selector.png" type="Texture" id=3]


[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
} ]

[node name="Emplacement" type="TextureRect"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 15.9419, 15.9727 )
frames = SubResource( 3 )
animation = "idle"

[node name="Sprite" type="Sprite" parent="."]
centered = false
offset = Vector2( 5, 5 )
[connection signal="gui_input" from="." to="." method="_on_Emplacement_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_Emplacement_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Emplacement_mouse_exited"]
